// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Quantum utils > determines OU after other pieces (new piece was captured) 1`] = `
{
  "fulls": [
    "Hi",
    "Ki",
    "Ou",
    "Fu",
    "Gi",
    "Ka",
    "Ke",
    "Ky",
  ],
  "kinds": [
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Ki",
      "Hi",
      "Ou",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Ki",
      "Hi",
      "Ou",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
    ],
  ],
}
`;

exports[`Quantum utils > determines to 2 KEs and exhausts it 1`] = `
{
  "fulls": [
    "Ke",
  ],
  "kinds": [
    [
      "Ke",
    ],
    [
      "Ke",
    ],
  ],
}
`;

exports[`Quantum utils > determines to 2 KEs and exhausts it 2`] = `
{
  "fulls": [
    "Ke",
  ],
  "kinds": [
    [
      "Ke",
    ],
    [
      "Ke",
    ],
    [
      "Fu",
      "Ky",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
      "Ou",
    ],
  ],
}
`;

exports[`Quantum utils > determines to HI after doing HI move and exhausts it 1`] = `
{
  "fulls": [
    "Hi",
  ],
  "kinds": [
    [
      "Hi",
    ],
  ],
}
`;

exports[`Quantum utils > determines to KE after doing KE jump 1`] = `
{
  "fulls": [],
  "kinds": [
    [
      "Ke",
    ],
  ],
}
`;

exports[`Quantum utils > determines to KI,HI,OU after going bKekward 1`] = `
{
  "fulls": [],
  "kinds": [
    [
      "Ki",
      "Hi",
      "Ou",
    ],
  ],
}
`;

exports[`Quantum utils > doesn't determine without move 1`] = `
{
  "fulls": [],
  "kinds": [
    [
      "Fu",
      "Ky",
      "Ke",
      "Gi",
      "Ki",
      "Ka",
      "Hi",
      "Ou",
    ],
  ],
}
`;
